# goit-python-setup

./: readme.md
module-1/: basic.py  interval.py
module-10/: test.py
module-10/cls1/: cls1.py
module-10/cls10/: cls10.py
module-10/cls11/: cls11.py
module-10/cls12/: cls12.py
module-12/: test.py
module-2/: exception.py  game.py  pin.py  raiseError.py  strings.py  task.py  test.py
module-3/: args.py  class.py  docstring.py  factorial.py  hello.py  mathModule.py  recursion.py  task1.py  task10.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py  test.py  workshop.py
module-4/: dict.py  list.py  myPathlib.py  set.py  task1.py  task10.py  task11.py  task12.py  task13.py  task14.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py  test.py  workshop.py
module-5/: format.py  regex.py  regex_api.py  regex_basic.py  task1.py  task10.py  task11.py  task12.py  task13.py  task14.py  task15.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py  test.py  text.py  translate.py  workshop.py
module-6/: bytes.py  hello.py  test.py
module-7/: main.py  test.py
module-7/hw7/clean_folder_main/: README.md  pyproject.toml
module-7/hw7/clean_folder_main/src/clean_package_vokur13/: clean.py  name_handler.py  parse_handler.py
module-7/packaging_tutorial/: pyproject.toml
module-7/packaging_tutorial/src/example_package_vokur13/: example.py
module-7/packaging_tutorial/src/example_package_vokur13.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
module-9/: test.py
(+189 files in other folders)
